--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         tools:ignore="MissingConstraints">
+
         <EditText
             android:id="@+id/search_input"
             android:layout_width="match_parent"
@@ -44,20 +45,21 @@
                 android:id="@+id/view_all_product"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="View All"
-                android:gravity="end"
                 android:layout_marginRight="7dp"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:text="View All"
+                android:textColor="@color/purple_700"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:textColor="@color/purple_700"/>
+                android:textStyle="bold" />
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/popular_product"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:id="@+id/popular_product"/>
+            android:layout_margin="5dp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -78,20 +80,20 @@
                 android:id="@+id/view_all_explore"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="View All"
-                android:gravity="end"
                 android:layout_marginRight="7dp"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:text="View All"
+                android:textColor="@color/purple_700"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:textColor="@color/purple_700"/>
+                android:textStyle="bold" />
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/explore_product"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:id="@+id/explore_product"/>
+            android:layout_margin="5dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -113,19 +115,19 @@
                 android:id="@+id/view_all_recommend"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="View All"
-                android:gravity="end"
                 android:layout_marginRight="7dp"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:text="View All"
+                android:textColor="@color/purple_700"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:textColor="@color/purple_700"/>
+                android:textStyle="bold" />
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recommend_product"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:id="@+id/recommend_product"/>
+            android:layout_margin="5dp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
