--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -16,7 +16,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="2">
 
@@ -146,6 +146,13 @@
                 android:textStyle="bold"/>
 
         </LinearLayout>
+        <ImageView
+
+            android:id="@+id/delete_item"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_baseline_delete_24"
+            />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
